Renomeado ServiceClass para DAO

--- a/force-app/main/default/classes/EmprestimoController.cls
+++ b/force-app/main/default/classes/EmprestimoController.cls
@@ -9,8 +9,8 @@ public with sharing class EmprestimoController {
     // Metodo estático que retorna uma lista de Emprestimos
     public static List<Emprestimo__c> buscaEmprestimos() 
     {
-        // Instancio um objeto da classe LivroServiceClass
-        EmprestimoServiceClass emprestimo = new EmprestimoServiceClass();
+        // Instancio um objeto da classe LivroDAO
+        EmprestimoDAO emprestimo = new EmprestimoDAO();
         // Retorno o método criado na classe
         return emprestimo.buscaEmprestimos();
     }
@@ -20,8 +20,8 @@ public with sharing class EmprestimoController {
     // Metodo estático que retorna uma lista de Emprestimos utilizando os parametros definidos
     public static List<Emprestimo__c> buscaEmprestimosPorKeyword(String keyword, String status)
     {
-        // Instancio um objeto da classe LivroServiceClass
-        EmprestimoServiceClass emprestimo = new EmprestimoServiceClass();
+        // Instancio um objeto da classe LivroDAO
+        EmprestimoDAO emprestimo = new EmprestimoDAO();
         // Retorno o método criado na classe
         return emprestimo.buscaEmprestimosPorKeyword(keyword, status);
     }
@@ -31,8 +31,8 @@ public with sharing class EmprestimoController {
     // Metodo estático que retorna um Emprestimo utilizando o parametro definido
     public static Emprestimo__c buscaEmprestimoPorId(Id emprestimoId) 
     {
-        // Instancio um objeto da classe LivroServiceClass
-        EmprestimoServiceClass emprestimo = new EmprestimoServiceClass();
+        // Instancio um objeto da classe LivroDAO
+        EmprestimoDAO emprestimo = new EmprestimoDAO();
         // Retorno o método criado na classe
         return emprestimo.buscaEmprestimoPorId(emprestimoId);
     }
@@ -42,8 +42,8 @@ public with sharing class EmprestimoController {
     // Metodo estático que retorna um Emprestimo utilizando os parametros definidos
     public static Emprestimo__c atualizaInsereEmprestimo(Id emprestimoId, Id livroId, Id leitorId, Boolean devolvido) 
     {
-        // Instancio um objeto da classe LivroServiceClass
-        EmprestimoServiceClass emprestimo = new EmprestimoServiceClass();
+        // Instancio um objeto da classe LivroDAO
+        EmprestimoDAO emprestimo = new EmprestimoDAO();
         // Retorno o método criado na classe
         return emprestimo.atualizaInsereEmprestimo(emprestimoId, livroId, leitorId, devolvido);
     }
@@ -53,8 +53,8 @@ public with sharing class EmprestimoController {
     // Metodo estático que retorna uma String utilizando o parametro definido
     public static String devolveEmprestimo(List<Id> emprestimoIds)  
     {
-        // Instancio um objeto da classe LivroServiceClass
-        EmprestimoServiceClass emprestimo = new EmprestimoServiceClass();
+        // Instancio um objeto da classe LivroDAO
+        EmprestimoDAO emprestimo = new EmprestimoDAO();
         // Retorno o método criado na classe
         return emprestimo.devolveEmprestimo(emprestimoIds);
     }
@@ -64,8 +64,8 @@ public with sharing class EmprestimoController {
     // Metodo estático que realiza o delete de um emprestimo através do parametro definido
     public static void deletaEmprestimo(Id emprestimoId) 
     {
-        // Instancio um objeto da classe LivroServiceClass
-        EmprestimoServiceClass emprestimo = new EmprestimoServiceClass();
+        // Instancio um objeto da classe LivroDAO
+        EmprestimoDAO emprestimo = new EmprestimoDAO();
         // Chamo o delete de emprestimo
         emprestimo.deletaEmprestimo(emprestimoId);
     }
