--- a/force-app/main/default/classes/PeriodicoDAO.cls
+++ b/force-app/main/default/classes/PeriodicoDAO.cls
@@ -3,17 +3,56 @@ public with sharing class PeriodicoDAO {
 
     }
 
-    public List<Periodico__c> buscaPeriodico() {
+    public List<Periodico__c> buscaPeriodicos() {
 
-        return null;
+        return [
+            SELECT 
+                id, 
+                Nome__c
+            FROM 
+                Periodico__c
+            ORDER BY Nome__c DESC
+        ];
     }
 
-    public Periodico__c atualizaInserePeriodico() {
+    public Periodico__c buscaPeriodicoPorId(Id periodicoId) {
 
-        return null;
+        return [
+            SELECT 
+                id, 
+                Nome__c
+            FROM 
+                Periodico__c
+            WHERE id = :periodicoId
+        ];
+    }
+
+    public Periodico__c atualizaInserePeriodico(Id periodicoId, String nome) {
+        // Instancio meu objeto periodico
+        Periodico__c periodico = new Periodico__c();
+
+        // Verifico se o parametro periodicoId não está vindo como nulo (vazio)
+        if (periodicoId != null)
+            periodico = buscaPeriodicoPorId(periodicoId);
+
+        if (nome != '')
+            periodico.Nome__c = nome;
+
+        try {
+            upsert periodico;
+        } catch (Exception e) {
+            throw new periodicoDAOException('Falha. O(s) seguinte(s) erro(s) foram encontrados: ' + e.getMessage());
+        }
+
+        return buscaPeriodicoPorId(periodico.Id);
     }
 
     public void deletaPeriodico() {
 
+        Periodo__c periodo = buscaPeriodoPorId(periodoId);
+
+        delete periodo;
     }
+
+    public class PeriodicoDAOException extends Exception {}
 }
