--- a/force-app/main/default/classes/ApexControllerClass.cls
+++ b/force-app/main/default/classes/ApexControllerClass.cls
@@ -96,6 +96,17 @@ public with sharing class ApexControllerClass
     
     // Deixo disponível para o Aura Component
     @AuraEnabled
+    // Metodo estático que retorna uma lista de livros, através do parametro titulo
+    public static List<Livro__c> buscaLivrosPorTituloReserva(String titulo) 
+    {
+        // Instancio um objeto da classe LivroDAO
+        LivroDAO livro = new LivroDAO();
+        // Retorno o método criado na classe
+        return livro.buscaLivrosPorTituloReserva(titulo);
+    }
+    
+    // Deixo disponível para o Aura Component
+    @AuraEnabled
     // Metodo estático que atualiza ou insere livro, retornando um único livro
     public static Livro__c atualizaInsereLivro(Id livroId, String codigo, String titulo, String autor, Integer quantidade) 
     {
